# Scout

./: .gitignore  CLAUDE.md
.planning/: HANDOFF.json  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-upload-parse/: .continue-here.md  01-01-SUMMARY.md  01-02-SUMMARY.md  01-03-SUMMARY.md  01-04-SUMMARY.md  01-05-SUMMARY.md  01-VALIDATION.md
.planning/phases/02-job-search/: 02-CONTEXT.md  02-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
scout-backend/: .env.example  alembic.ini  pyproject.toml
scout-backend/alembic/: env.py
scout-backend/app/: database.py  main.py
scout-backend/app/models/: __init__.py  resume.py
scout-backend/app/routers/: __init__.py  upload.py
scout-backend/app/schemas/: resume.py
scout-backend/app/services/: claude_parser.py  docx_parser.py  parse_coordinator.py  pdf_parser.py
scout-backend/tests/: conftest.py  test_claude_parser.py  test_docx_parser.py  test_pdf_parser.py  test_resume_route.py  test_upload_route.py
scout-frontend/: README.md  components.json  package-lock.json  package.json  vite.config.ts
scout-frontend/src/assets/: main.css
scout-frontend/src/components/: ParseProgress.vue  UploadZone.vue
scout-frontend/src/components/ResumeForm/: EducationSection.vue  PaperSection.vue  PersonalSection.vue  (+4 more)
scout-frontend/src/router/: index.ts
scout-frontend/src/services/: api.ts
scout-frontend/src/stores/: resume.ts
scout-frontend/src/types/: resume.ts
scout-frontend/src/views/: ReviewView.vue  UploadView.vue
(+11 files in other folders)
